--- a/css/cssmounir.css
+++ b/css/cssmounir.css
@@ -1,14 +1,20 @@
 header
 {
 	height: 40px;
+	font-size: 20px;
 }
 h1
 {
 	color: red;
+	font-family: Arial;
+
+	
 }
 h2
 {
 	color: red;
+	
+	
 }
 p 
 {
