--- a/css/css-remy.css
+++ b/css/css-remy.css
@@ -1,8 +1,8 @@
 body{
-background:url(RP12.jpeg) top left no-repeat;
+	background:url(images-g-r/RP12.jpeg) top left no-repeat;
 }
 div:hover{
-background:url(RP5.jpg) bottom right;
+background:url(images-g-r/RP5.jpg) bottom right;
 -webkit-transition: all 3.0s ease;
 -moz-transition: all 3.0s ease;
 -ms-transition: all 3.0s ease;
@@ -126,6 +126,5 @@ h1
 {
 	margin-top : -2px;
 }
-
 
 
