--- a/css/css_gwen.css
+++ b/css/css_gwen.css
@@ -35,8 +35,21 @@ div
 
 #test1
 {
+	
 	border: 3px black solid; font-size: 30px;
 	width: 40%; text-align: center; margin: auto
+}
+
+#test1:hover
+{
+	
+	border: 3px black solid; font-size: 70px;
+	width: 100%; text-align: center; margin: auto;
+	-webkit-transition: all 4.0s ease;
+-moz-transition: all 4.0s ease;
+-ms-transition: all 4.0s ease;
+-o-transition: all 4.0s ease;
+transition: all 3.8s ease;
 }
 
 #test2 
@@ -61,7 +74,7 @@ width:50px;height:50px;
 
 .mail:hover
 {
-	opacity: 0.6;
+	opacity: 0.4;
 	-webkit-transition: all 4.0s ease;
 -moz-transition: all 4.0s ease;
 -ms-transition: all 4.0s ease;
@@ -120,7 +133,8 @@ text-align: left
 -moz-transition: all 4.0s ease;
 -ms-transition: all 4.0s ease;
 -o-transition: all 4.0s ease;
-transition: all 0.8s ease;
+transition: all 0.8s ease; width: 15%;
+height: 20%;
 }
 
 .logo
