--- a/css/css_gwen.css
+++ b/css/css_gwen.css
@@ -114,7 +114,7 @@ text-align: left
 {
     width: 70px;
     height: 70px;
-    margin-left: 180px; margin-top: -72px;
+    margin-left: 700px; margin-top: -72px;
     display:block; position: absolute;
 }
 
@@ -122,7 +122,7 @@ text-align: left
 {
     width: 80px;
     height: 80px;
-    margin-left: 250px; margin-top: -76px;
+    margin-left: 850px; margin-top: -76px;
     display:block; 
 }
 
@@ -146,7 +146,7 @@ height: 20%;
 h1
 {
 	margin-top : -2px;
-	text-align: right; margin-right: 20px;
+	text-align: center; margin-right: 20px;
 
 } 
 
