--- a/css/david.css
+++ b/css/david.css
@@ -1,31 +1,30 @@
  body{
 	margin:0px;
-	/*background-image:url('img/fond5.jpg ');
-	background-repeat: no-repeat;*/
-	background-image:linear-gradient(#3D53C3, white); /* Norme W3C */
-	background-image:-moz-linear-gradient(#3D53C3, white); /* Firefox */
-	background-image:-webkit-gradient(linear, #3D53C3, white); /* Chrome, Safari */
-	background-image:-o-linear-gradient(#3D53C3, white); /* Opera */
-	background-image:-ms-linear-gradient(#3D53C3, white); /* IE */
+	/*background-image:url('img/fond2.jpg');
+		background-position:center;
+		background-repeat:no-repeat;
+		background-size:200%;*/
+	background-image:linear-gradient(#000000, white); /* Norme W3C */
+	background-image:-moz-linear-gradient(#000000, #FFFC00); /* Firefox */
+	background-image:-webkit-gradient(linear, #000000, #FFFC00); /* Chrome, Safari */
+	background-image:-o-linear-gradient(#000000, #FFFC00); /* Opera */
+	background-image:-ms-linear-gradient(#000000, #FFFC00); /* IE */
  }
 
 #title {
-		/*background-image:url('img/ban.png');
+		/*background-image:url('img/fond3.jpg');
 		background-position:center;
 		background-repeat:no-repeat;
 		background-size:100%;*/
-		/*background-image:linear-gradient(white, #3D53C3); /* Norme W3C */
-			/*background-image:-moz-linear-gradient(white, #3D53C3); /* Firefox */
-			/*background-image:-webkit-gradient(linear, white, #3D53C3); /* Chrome, Safari */
-			/*background-image:-o-linear-gradient(white, #3D53C3); /* Opera */
-			/*background-image:-ms-linear-gradient(white, #3D53C3); /* IE */
-		background-color: #3D53C3;
+		background-color: #505050;
 		width:auto;
-		height: 80px;
+		height: 75px;
 		border-bottom: 2px solid white;
 		text-align:center;
+		text-decoration: underline;
 		font-family:Times;
-		font-size:30px;
+		font-size:40px;
+		padding-top: 25px;
 }
 #logo {
 	position:absolute;
@@ -99,7 +98,8 @@
 	border: solid 2px black;
 	margin:20px 0px 20px 20px;
 	float:left;
-	box-shadow: 8px 4px 0px #292121; 
+	box-shadow: 8px 4px 0px #000000;
+	border-radius: 10%;
 }
 
 #text{
@@ -147,9 +147,12 @@
 	float:right;
 	clear:left;
 	font-family:Times;
-	box-shadow: 8px 4px 0px #292121;
+	box-shadow: 8px 4px 0px #000000;
+	border-radius: 10%;
 }
-
+p{
+	margin:0px;
+}
 #text2{
 	margin-top:15px;
 	height:200px;
