--- a/css/desingolivier.css
+++ b/css/desingolivier.css
@@ -14,36 +14,40 @@ h3{
 
 body{
 
-	background-image: url("/home/apprenti/Bureau/maman/arches.png");
+	padding-top: 10px;
+	background-color: #5E86C6;
+	font-size: 20px;
+	font-style: italic;
+}
 
+[class="col-"]{
+	border: 2px solid;
+	border-radius: 6px;
+	line-height: 35px;
+	text-align: center;
 }
 
 header{
-
-	display: inline-block;
-	width: 350px;
-	border: 3px teal ridge;
-	vertical-align: top;
-	float: left;
+	font-size: 80px;
+	font-family: Times;
 	text-align: center;
-	font-family: Norasi;
-
-}
-
-#photodepresentation{
-
-	display: inline-block;
-	border: 3px teal ridge;
-	vertical-align: top;
-	float: right;
+	font-weight: bold;
+	background-color: #8DC5F9;
+	color: #172756;
+	
 }
 
 
 h3{
 
 	text-align: center;
-	text-shadow: 2px 2px 4px darkslategrey;
+	text-shadow: 4px 4px 2px #202624;
 	font-family: Norasi;
-	font-size: 35px;
+	font-size: 40px;
+
 }
+
+
+
+
 
