--- a/css/css_gwen.css
+++ b/css/css_gwen.css
@@ -1,5 +1,7 @@
-body{
-	background:url(images-g-r/Cubes.jpg) center;
+body
+{
+	background:url(images-g-r/Cubes.jpg) center; overflow: hidden;
+	font-family: 'Oswald', sans-serif;
 }
 
 body:hover
@@ -27,11 +29,11 @@ div
 	background-color: black; color: white;box-shadow: 4px 4px 4px 0px black; 
 }
 
-
 #test
 {
-	border: 3px black solid; margin-bottom: 60px;
+	border: 3px black solid; margin-bottom: 60px; margin-top: -10px;
 }
+
 
 #test1
 {
@@ -42,14 +44,15 @@ div
 
 #test1:hover
 {
-	
+	background: url(images-g-r/Cubes.jpg);
 	border: 3px black solid; font-size: 70px;
 	width: 100%; text-align: center; margin: auto;
 	-webkit-transition: all 4.0s ease;
 -moz-transition: all 4.0s ease;
 -ms-transition: all 4.0s ease;
 -o-transition: all 4.0s ease;
-transition: all 3.8s ease;
+transition: all 2.8s ease; opacity: 0.7;
+
 }
 
 #test2 
@@ -114,7 +117,7 @@ text-align: left
 {
     width: 70px;
     height: 70px;
-    margin-left: 700px; margin-top: -72px;
+    margin-left: 700px; margin-top: -82px;
     display:block; position: absolute;
 }
 
@@ -122,7 +125,7 @@ text-align: left
 {
     width: 80px;
     height: 80px;
-    margin-left: 850px; margin-top: -76px;
+    margin-left: 850px; margin-top: -86px;
     display:block; 
 }
 
@@ -134,20 +137,27 @@ text-align: left
 -ms-transition: all 4.0s ease;
 -o-transition: all 4.0s ease;
 transition: all 0.8s ease; width: 15%;
-height: 20%;
+height: 22%;
 }
 
 .logo
 {
-	margin-left:85px;
+	margin-left:85px; margin-top: 5px;
 
+}
+
+.logo img:hover
+{
+	width: 300px; margin-top: -10px; margin-left: -30px;
+	height:300px;
+	 	-webkit-transition: all 4.0s ease;
+-moz-transition: all 4.0s ease;
+-ms-transition: all 4.0s ease;
+-o-transition: all 4.0s ease;
+transition: all 5.8s ease;
 }
 
 h1
 {
-	margin-top : -2px;
-	text-align: center; margin-right: 20px;
-
+	text-align: center;
 } 
-
-
