--- a/css/mathieu.css
+++ b/css/mathieu.css
@@ -1,3 +1,12 @@
+#logo
+{
+left: 0%;
+margin-left: 910px;
+margin-top: -285px;
+position: absolute;
+top: 45%;
+}
+
 #nom a {
   color: #00BFFF;
   font-style: italic;
@@ -85,13 +94,14 @@ width: 1010px;
 
 }
 
- #bar 
+#bar 
  {
   background-color: #2F4F4F;
   height: 420px;
   width: 10px;
   margin-left: 480px;
 }
+
 img 
 {
   border-radius: 5px;
