--- a/css/flo1.css
+++ b/css/flo1.css
@@ -1,72 +1,79 @@
-#picture 
-{   text-align: center;
-	margin: auto;
-	height:200px;
-	width:200px;
-}
 
-#pic
-{   margin: auto;
-	height:200px;
-	width:200px;
-}
-
-#Galerie
+#div
 {
-	margin:auto;
-	height:200px;
-	width:650px;
+	     height:90px;
+	     width:150px;
+	     border-top:2px;
+	     background-color:green;
+	     text-align:center;
+
+}
+html{
+  background-image:url(http://wallpoper.com/images/00/45/05/47/green-background-2_00450547.jpg);}
+.un
+{
+	font-size:28px;
+  color:yellow;
+  font-family:arial;
+}
+.deux{
+	font-family: italic;
+	font-size: 32px;
+	color:#996600;
+	text-align: left;
 }
 
-#imgbis
-{
-	margin:0px 0px 0px 75px;
+.fb{
+	text-align:right;
+}
+li{
+	font-size: 20px;
+	font-family: arial;
+}
+#trois{
+	   width:900px;
+	   height:auto;
+	   font-size:60px;
+	   text-align:right;
+     border-radius:100%;
+}
+#im{
+	text-align:left;
+	 width: 1000px;
+	 height:150px;
 }
 
-h1 
+#div h1 
 {
-	font-family: Verdana;
-	font-weight: bold;
-	text-align: center;
-	padding-top: 25px;
-	padding-bottom: 25px;
-	color:red;
+	font-family:Verdana;
+	font-weight:bold;
+	text-align:center;
+	padding-top:25px;
+	padding-bottom:25px;
+	color:green;
 }
 	
-h3
+ #h3
 {
-	font-family: Verdana;
-	font-weight: bold;
-	text-align: center;
-	padding-top: 32px;
-	padding-bottom: 32px;
+	font-family:Verdana;
+	font-weight:bold;
+	text-align:center;
+	padding-top:20px;
+	padding-bottom:20px;
 	color:black;
 
 }
+#site
+{    text-align: right;
+	    height: 50px;
+	    width: 50px;
 
-#header
-{
-	height:950px;
-	width:650px;
-	background-color:#6699FF;
-	margin:auto;
 }
-p
+#p
 {
-	font-size: 16px;
+	font-size:32px;
 	font-family:italique;
-	color:#993300 ;
-}
-img
-{
-	height:100px;
-	width:100px;
-	margin:auto;
-}
-img src 
-{
-	height:100px;
-	width:100px;
-	margin:auto;
+	color:#996600;
+  font-weight:bold;
 }
 
