modification fichier css

--- a/css/flo1.css
+++ b/css/flo1.css
@@ -34,7 +34,7 @@ li{
 	   width:900px;
 	   height:auto;
 	   font-size:60px;
-	   text-align:right;
+	   text-align:center;
      border-radius:100%;
 }
 #im{
