--- a/css/mathieu.css
+++ b/css/mathieu.css
@@ -102,7 +102,11 @@ width: 1010px;
   margin-left: 480px;
 }
 
-img 
+#mail {
+  border-radius: 100%;
+}
+
+#pics
 {
   border-radius: 5px;
   border:2px solid #00BFFF;
